--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,22 @@
 version: '3'
 services:
+  nginx:
+    depends_on:
+      - api
+      - client
+    restart: always
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile.dev
+    ports:
+      - '3050:80'
   postgres:
     image: 'postgres:latest'
     environment:
       - POSTGRES_PASSWORD=postgres_password
   redis:
     image: 'redis:latest'
-  server:
+  api:
     build:
       context: ./server
       dockerfile: Dockerfile.dev
